adding ex solver for console, using  delegate

--- a/Sources/myUtilities/myUtilities.csproj
+++ b/Sources/myUtilities/myUtilities.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsoleExceptionSolver.cs" />
     <Compile Include="FormPage.cs" />
     <Compile Include="MyMath.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
