--- a/Sources/Utils/Utils.csproj
+++ b/Sources/Utils/Utils.csproj
@@ -44,10 +44,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConsoleExceptionSolver.cs" />
+    <Compile Include="ConsoleUtils.cs" />
     <Compile Include="FormPage.cs" />
-    <Compile Include="MyMath.cs" />
+    <Compile Include="Math.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utilities.cs" />
+    <Compile Include="WindowsFormsUtils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
