--- a/Sources/Utils/Utils.csproj
+++ b/Sources/Utils/Utils.csproj
@@ -43,12 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConsoleExceptionSolver.cs" />
     <Compile Include="ConsoleUtils.cs" />
+    <Compile Include="ConsoleExceptionSolver.cs" />
+    <Compile Include="DrawingUtils.cs" />
     <Compile Include="FormPage.cs" />
     <Compile Include="Math.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WindowsFormsUtils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
